# reader-rust

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER_RELEASE.md  Dockerfile  Dockerfile.x86  README.md  RELEASE_WORKFLOW.md  book-source-rules.md  compat_report.md  docker-compose.yml  package-lock.json  package.json  search_score_report.md  source_display_report.md  source_health_report.md  test_report.md
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-06-08-local-txt-books-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/api/: source.ts  (+5 more)
scripts/: release.sh
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/app/: bootstrap.rs  config.rs
src/crawler/: fetcher.rs  mod.rs  url_analyzer.rs
src/error/: error.rs  mod.rs
src/model/: ai_book.rs  ai_model.rs  ai_proxy.rs  book_source.rs  mod.rs  reading_progress.rs  replace_rule.rs  rule.rs  search.rs  user.rs
src/parser/: html.rs  html_clean.rs  js.rs  jsonpath.rs  mod.rs  rule_analyzer.rs  rule_engine.rs
src/service/: ai_book_service.rs  ai_model_service.rs  book_group_service.rs  book_service.rs  book_source_service.rs  catalog.rs  content_quality.rs  health.rs  json_document_service.rs  local_epub_book.rs  local_txt_book.rs  mod.rs  update_service.rs  user_service.rs
src/storage/: mod.rs
src/util/: atomic.rs  crypto.rs  hash.rs  mod.rs  text.rs
tests/: ai_book_memory.rs  ai_proxy.rs  book_source_compat.rs  book_source_validation.rs  local_epub_book.rs  local_txt_book.rs  progress_sync.rs  version_update.rs  yckceo_live_sources.rs
(+79 files in other folders)
